@@ -41,7 +41,7 @@ install: build
 	debian/install-rc commit.d
 	debian/install-rc finish.d
 	debian/install-rc update.d
-	debian/install-rc valid_visuals.d
+	debian/install-rc visual.d
 	debian/install-rc display.d
 
 binary-arch: build install
