@@ -1,3 +1,0 @@
-#!/bin/sh
-
-printf "bootable\tThe bootable flag\n"
