@@ -1,3 +1,0 @@
-#!/bin/sh
-
-printf "number\tPartition number\n"
