@@ -1,3 +1,0 @@
-#!/bin/sh
-
-printf "size\tSize\n"
