@@ -12,6 +12,12 @@ fs=$6
 path=$7
 name=$8
 
-db_metaget "partman/text/$type" description
+open_dialog USES_EXTENDED
+read_line x
+close_dialog
 
-stralign -9 " $RET"
+if [ "$x" = "yes" ]; then
+	db_metaget "partman/text/$type" description
+
+	stralign -9 " $RET"
+fi
