@@ -5,6 +5,9 @@ partman-partitioning (61) UNRELEASED; urgency=low
     Requires partman-base (>= 124).
   * Use cdebconf's new column alignment feature for active_partition.
     Requires partman-base (>= 124).
+  * The valid_visuals.d mechanism has been removed from partman-base.  No need
+    to ask for a refresh anymore in create_new_label().
+    Requires partman-base (>= 124).
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 18 Jul 2008 16:30:58 +0000
 
